Add Swagger docs for roles
